--- a/assets/css/globalstyles.css
+++ b/assets/css/globalstyles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&family=Nunito:wght@200;300;400;500;600;700;800&display=swap');
+
+
 /* Color Variables */
 :root {
     --primary: #1B5E20;
@@ -11,6 +14,8 @@
     --light-grey: #f5f5f5;
     --dark-blue: #003366;
     --light-blue:#f3fafc;
+    --primary-font: 'Nunito', sans-serif;
+    --heading-font: 'Poppins', sans-serif;
 }
 
 /* Reset and Base Styles */
@@ -18,8 +23,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--primary-font);
     scroll-behavior: smooth;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--heading-font);
 }
 
 html {
@@ -28,6 +37,7 @@ html {
 
 button {
     transition: all 0.3s ease-in-out;
+    font-family: var(--heading-font);
 }
 
 button:hover {
@@ -221,7 +231,7 @@ section {
 }
 
 .nav-link {
-    font-weight: 500;
+    font-weight: 600;
     padding: 0.5rem;
     color: white;
     transition: color 0.3s ease;
